--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
   },
   "keywords": [],
   "author": "Oleg Avdeev",
-  "license": "ISC",
+  "license": "GNU3",
+  "repository": {
+    "url": "https://github.com/Oleg-Avdeev/TOME"
+  },
   "devDependencies": {
     "electron": "^12.0.1"
   },
   "dependencies": {
+    "papaparse": "^5.3.0",
     "typescript": "^4.2.3"
   }
 }
