--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "electron": "^12.0.1"
   },
   "dependencies": {
+    "electron-store": "^8.0.0",
     "papaparse": "^5.3.0",
     "typescript": "^4.2.3"
   }
