--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "url": "https://github.com/Oleg-Avdeev/TOME"
   },
   "devDependencies": {
-    "electron": "^12.0.1"
+    "electron": "^12.0.1",
+    "eslint": "^7.27.0"
   },
   "dependencies": {
     "electron-store": "^8.0.0",
