--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,6 @@ ts-gen
 patches/mtime-cache.json
 
 /data
+scripts/google/credentials-electron.json
+scripts/google/credentials.json
+scripts/google/token.json
