--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "electron-store": "^8.0.0",
+    "googleapis": "^78.0.0",
     "papaparse": "^5.3.0",
     "typescript": "^4.2.3"
   }
