--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-	"build": "electron-packager . --overwrite --icon=./tome.icns"
+	"build": "electron-packager . --overwrite --icon=./build/tome.icns"
   },
   "keywords": [],
   "author": "Oleg Avdeev",
