--- a/.gitignore
+++ b/.gitignore
@@ -72,8 +72,6 @@ patches/mtime-cache.json
 
 /data
 /verification
-scripts/google/credentials-electron.json
-scripts/google/credentials.json
-scripts/google/token.json
 
 /tome-editor-darwin-x64
+/Tome Editor-darwin-x64
