--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tome-editor",
-  "productName": "tome-editor",
+  "productName": "Tome Editor",
   "version": "0.1.0",
   "description": "Tome Editor — Editor for TOME-format narrative trees",
   "main": "main.js",
@@ -21,8 +21,6 @@
   },
   "dependencies": {
     "electron-store": "^8.0.0",
-    "googleapis": "^78.0.0",
-    "papaparse": "^5.3.0",
-    "typescript": "^4.2.3"
+    "papaparse": "^5.3.0"
   }
 }
