--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "tome-editor",
   "productName": "Tome Editor",
-  "version": "0.1.0",
+  "version": "1.0.1",
   "description": "Tome Editor — Editor for TOME-format narrative trees",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-	"build": "electron-packager . --overwrite --icon=./build/tome.icns"
+	"build": "electron-packager . --overwrite --out=out --icon=./build/tome.icns",
+	"build-all": "electron-packager . --overwrite --out=out --icon=./build/tome.icns --all"
   },
   "keywords": [],
   "author": "Oleg Avdeev",
